Add second part with deployment and registry

--- a/tutorial/1_Run and track experiments.ipynb
+++ b/tutorial/1_Run and track experiments.ipynb
@@ -76,34 +76,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>290</th>\n",
-       "      <td>50.3</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Chinstrap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>40.9</td>\n",
-       "      <td>16.8</td>\n",
-       "      <td>Adelie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>Adelie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>45.5</td>\n",
-       "      <td>13.9</td>\n",
+       "      <th>198</th>\n",
+       "      <td>50.5</td>\n",
+       "      <td>15.9</td>\n",
        "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>51.3</td>\n",
-       "      <td>19.2</td>\n",
+       "      <th>274</th>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
        "      <td>Chinstrap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>41.3</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>Adelie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>45.5</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>Gentoo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>46.5</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,11 +111,11 @@
       ],
       "text/plain": [
        "     Culmen Length (mm)  Culmen Depth (mm)    Species\n",
-       "290                50.3               20.0  Chinstrap\n",
-       "75                 40.9               16.8     Adelie\n",
-       "147                36.0               17.8     Adelie\n",
-       "197                45.5               13.9     Gentoo\n",
-       "276                51.3               19.2  Chinstrap"
+       "198                50.5               15.9     Gentoo\n",
+       "274                46.5               17.9  Chinstrap\n",
+       "60                 41.3               21.1     Adelie\n",
+       "243                45.5               14.5     Gentoo\n",
+       "156                46.5               13.5     Gentoo"
       ]
      },
      "execution_count": 1,
@@ -259,9 +259,16 @@
    "id": "150febdf",
    "metadata": {},
    "source": [
-    "Run\n",
+    "We want to use a database as a tracking store and a local directory as artifact store.\n",
+    "Using a database is required for later steps in the tutorial, like managing deployments. In this case, artifacts are stored under the local ./mlruns directory, and MLflow entities are inserted in a SQLite database file mlruns.db.\n",
     "\n",
-    "```mlflow server --backend-store-uri mlruns/ --default-artifact-root mlruns/ --host 0.0.0.0 --port 5000```\n",
+    "\n",
+    "![tracking setup](../resources/tracking_setup.png)\n",
+    "\n",
+    "\n",
+    "Run to start the tracking server:\n",
+    "\n",
+    "```mlflow server --backend-store-uri sqlite:///mflow.db --default-artifact-root mlruns/ --host 0.0.0.0 --port 5000```\n",
     "\n",
     "in a terminal. Make sure you run it inside the virtual environment! Put `pipenv run` in front of it.\n",
     "\n",
@@ -397,7 +404,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run d26c2e3a295344b5b97bbf174994fb7c\n",
+      "Started run 3023b2cde35f40699ffd3b4694d36118\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -487,6 +494,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2150c6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXERCISE:\n",
+    "\n",
+    "mlflow.set_experiment(exp_name)  # <-- set the experiment we want to track to\n",
+    "with mlflow.start_run() as run:         # <-- start a run of the experiment\n",
+    "    print(f\"Started run {run.info.run_id}\")\n",
+    "    # Load dataset\n",
+    "    print(\"Load dataset...\")\n",
+    "    culmen_columns = [\"Culmen Length (mm)\", \"Culmen Depth (mm)\"]\n",
+    "    target_column = \"Species\"\n",
+    "\n",
+    "    data_path = \"../data/penguins_classification.csv\"\n",
+    "    data = pd.read_csv(data_path)\n",
+    "\n",
+    "    # Prepare a train-test-split\n",
+    "    print(\"Prepare a train-test-split...\")\n",
+    "    data, target = data[culmen_columns], data[target_column]\n",
+    "    data_train, data_test, target_train, target_test = train_test_split(\n",
+    "        data, target, random_state=0)\n",
+    "\n",
+    "    # Initialize and fit a classifier\n",
+    "    max_depth = 3\n",
+    "    max_leaf_nodes = 4\n",
+    "    print(f\"Initialize and fit a DecisionTreeClassifier with max_depth={max_depth}, max_leaf_nodes{max_leaf_nodes}\")\n",
+    "    \n",
+    "    mlflow.log_params(            # <-- Track parameters\n",
+    "        {\"max_depth\": max_depth, \n",
+    "         \"max_leaf_nodes\": max_leaf_nodes}\n",
+    "    )\n",
+    "    tree = DecisionTreeClassifier(\n",
+    "        max_depth=max_depth,\n",
+    "        max_leaf_nodes=max_leaf_nodes\n",
+    "    )\n",
+    "    tree.fit(data_train, target_train)\n",
+    "\n",
+    "    # Calculate test scores\n",
+    "    test_score = tree.score(data_test, target_test)\n",
+    "    mlflow.log_metric(\"test_accuracy\", test_score)   # <-- Track metrics\n",
+    "    print(f\"Result: Accuracy of the DecisionTreeClassifier: {test_score:.1%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "a39f8f12",
    "metadata": {},
@@ -495,7 +549,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run ba843b7a1a804ee1b4c325ea61cc66fe\n",
+      "Started run 461b8b3f27674f3c9685ae575f058d88\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -504,7 +558,7 @@
     }
    ],
    "source": [
-    "# SOLUTION:\n",
+    "# POSSIBLE SOLUTION:\n",
     "\n",
     "mlflow.set_experiment(exp_name)  # <-- set the experiment we want to track to\n",
     "with mlflow.start_run() as run:         # <-- start a run of the experiment\n",
@@ -576,7 +630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run 869bc120e8df4037bf91ffe1002815c6\n",
+      "Started run 362968c82478466abc86fe92d158c987\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -637,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "70f86ddd",
    "metadata": {},
    "outputs": [
@@ -661,14 +715,14 @@
        "       'Chinstrap', 'Adelie', 'Chinstrap', 'Gentoo'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import mlflow\n",
-    "logged_model = 'runs:/869bc120e8df4037bf91ffe1002815c6/model'\n",
+    "logged_model = 'runs:/362968c82478466abc86fe92d158c987/model'\n",
     "\n",
     "# Load model as a Sklearn Model.\n",
     "loaded_model = mlflow.sklearn.load_model(logged_model)\n",
@@ -677,6 +731,14 @@
     "import pandas as pd\n",
     "loaded_model.predict(pd.DataFrame(data_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2b840d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
