--- a/tutorial/1_Run and track experiments.ipynb
+++ b/tutorial/1_Run and track experiments.ipynb
@@ -5,7 +5,7 @@
    "id": "a2008fa7",
    "metadata": {},
    "source": [
-    "# 1. Do some machine learning"
+    "# 1. Running and tracking machine learning experiments"
    ]
   },
   {
@@ -76,33 +76,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>50.5</td>\n",
-       "      <td>15.9</td>\n",
+       "      <th>245</th>\n",
+       "      <td>44.5</td>\n",
+       "      <td>14.7</td>\n",
        "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>274</th>\n",
-       "      <td>46.5</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>Chinstrap</td>\n",
+       "      <th>210</th>\n",
+       "      <td>50.4</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>41.3</td>\n",
-       "      <td>21.1</td>\n",
+       "      <th>21</th>\n",
+       "      <td>35.9</td>\n",
+       "      <td>19.2</td>\n",
        "      <td>Adelie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>45.5</td>\n",
-       "      <td>14.5</td>\n",
+       "      <th>161</th>\n",
+       "      <td>40.9</td>\n",
+       "      <td>13.7</td>\n",
        "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>46.5</td>\n",
-       "      <td>13.5</td>\n",
+       "      <th>228</th>\n",
+       "      <td>51.1</td>\n",
+       "      <td>16.3</td>\n",
        "      <td>Gentoo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -110,12 +110,12 @@
        "</div>"
       ],
       "text/plain": [
-       "     Culmen Length (mm)  Culmen Depth (mm)    Species\n",
-       "198                50.5               15.9     Gentoo\n",
-       "274                46.5               17.9  Chinstrap\n",
-       "60                 41.3               21.1     Adelie\n",
-       "243                45.5               14.5     Gentoo\n",
-       "156                46.5               13.5     Gentoo"
+       "     Culmen Length (mm)  Culmen Depth (mm) Species\n",
+       "245                44.5               14.7  Gentoo\n",
+       "210                50.4               15.3  Gentoo\n",
+       "21                 35.9               19.2  Adelie\n",
+       "161                40.9               13.7  Gentoo\n",
+       "228                51.1               16.3  Gentoo"
       ]
      },
      "execution_count": 1,
@@ -205,7 +205,7 @@
    "id": "dd3780fd",
    "metadata": {},
    "source": [
-    "# 2. Tracking experiments with MLflow"
+    "## 1.3. MLflow Stores"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "- Local file path (specified as file:/my/local/dir), where data is just directly stored locally. Defaults to `mlruns/`.\n",
     "- Database encoded as +://:<password>@:/. Mlflow supports the dialects mysql, mssql, sqlite, and postgresql. For more details, see SQLAlchemy database uri.\n",
     "- HTTP server (specified as https://my-server:5000), which is a server hosting an MLFlow tracking server.\n",
-    "- Databricks workspace (specified as databricks or as databricks://, a Databricks CLI profile.\n",
+    "- Databricks workspace (specified as databricks or as databricks://, a Databricks CLI profile.)\n",
     "\n",
     "### Artifact stores\n",
     "Where you store models, plots and other stuff.\n",
@@ -231,19 +231,7 @@
     "- FTP server\n",
     "- SFTP Server\n",
     "- NFS\n",
-    "- HDFS\n",
-    "\n",
-    "Start the MLflow tracking server by running\n",
-    "\n",
-    "```\n",
-    "mlflow server \\\n",
-    "    --backend-store-uri /mnt/persistent-disk \\\n",
-    "    --default-artifact-root s3://my-mlflow-bucket/ \\\n",
-    "    --host 0.0.0.0\n",
-    "    --port 5000\n",
-    "```\n",
-    "\n",
-    "or use the default storage method to write to `mlruns/`."
+    "- HDFS"
    ]
   },
   {
@@ -251,7 +239,7 @@
    "id": "98893984",
    "metadata": {},
    "source": [
-    "## 2.1. Setup and configure the tracking server"
+    "## 1.4. Setup and configure the tracking server"
    ]
   },
   {
@@ -293,8 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mlflow server --backend-store-uri mlruns/ --default-artifact-root mlruns/ --host 0.0.0.0 --port 5000\n",
-    "remote_server_uri = \"http://0.0.0.0:5000\" # set to your server URI\n",
+    "remote_server_uri = \"http://0.0.0.0:5000\"   # set to your server URI\n",
     "mlflow.set_tracking_uri(remote_server_uri)  # or set the MLFLOW_TRACKING_URI in the env"
    ]
   },
@@ -354,7 +341,7 @@
    "id": "77fc6a11",
    "metadata": {},
    "source": [
-    "## 2.2. Add tracking code to the machine learning experiment above\n",
+    "## 1.5. Add tracking code to the machine learning experiment above\n",
     "\n",
     "Basic things to track:\n",
     "- Parameters: Key-value input parameters: `mlflow.log_param, mlflow.log_params`\n",
@@ -404,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run 3023b2cde35f40699ffd3b4694d36118\n",
+      "Started run aee9784477a64b87800a676c19fb36ac\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -464,7 +451,7 @@
    "id": "0b28e17d",
    "metadata": {},
    "source": [
-    "## 2.3. Exercise: track some more stuff"
+    "## 1.6. Exercise: track some more stuff"
    ]
   },
   {
@@ -489,15 +476,29 @@
    "id": "0ac48edd",
    "metadata": {},
    "source": [
-    "Track the properties of the input data as parameters. (Hint: `data.shape[0]` gives the number of samples in a dataframe)"
+    "### Exercises: \n",
+    "- Track the properties of the input data as parameters. (Hint: `data.shape[0]` gives the number of samples in a dataframe)\n",
+    "- Track the notebook 'source code'. (Hint: `mlflow.log_artifact()` takes a path and copies the file to the artifact store.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2150c6bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started run 433b40f89b784e98b09f1a8d0235579e\n",
+      "Load dataset...\n",
+      "Prepare a train-test-split...\n",
+      "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
+      "Result: Accuracy of the DecisionTreeClassifier: 96.5%\n"
+     ]
+    }
+   ],
    "source": [
     "# EXERCISE:\n",
     "\n",
@@ -549,7 +550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run 461b8b3f27674f3c9685ae575f058d88\n",
+      "Started run 8d29a05e9363452ea7281da00295a109\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -560,8 +561,8 @@
    "source": [
     "# POSSIBLE SOLUTION:\n",
     "\n",
-    "mlflow.set_experiment(exp_name)  # <-- set the experiment we want to track to\n",
-    "with mlflow.start_run() as run:         # <-- start a run of the experiment\n",
+    "mlflow.set_experiment(exp_name)\n",
+    "with mlflow.start_run() as run:\n",
     "    print(f\"Started run {run.info.run_id}\")\n",
     "    # Load dataset\n",
     "    print(\"Load dataset...\")\n",
@@ -583,7 +584,7 @@
     "    max_leaf_nodes = 4\n",
     "    print(f\"Initialize and fit a DecisionTreeClassifier with max_depth={max_depth}, max_leaf_nodes{max_leaf_nodes}\")\n",
     "    \n",
-    "    mlflow.log_params(            # <-- Track parameters\n",
+    "    mlflow.log_params(\n",
     "        {\"max_depth\": max_depth, \n",
     "         \"max_leaf_nodes\": max_leaf_nodes}\n",
     "    )\n",
@@ -595,7 +596,8 @@
     "\n",
     "    # Calculate test scores\n",
     "    test_score = tree.score(data_test, target_test)\n",
-    "    mlflow.log_metric(\"test_accuracy\", test_score)   # <-- Track metrics\n",
+    "    mlflow.log_metric(\"test_accuracy\", test_score)\n",
+    "    mlflow.log_artifact(\"1_Run and track experiments.ipynb\")  # <-- ADDED: track the source code of the notebook\n",
     "    print(f\"Result: Accuracy of the DecisionTreeClassifier: {test_score:.1%}\")"
    ]
   },
@@ -604,7 +606,7 @@
    "id": "9548fff0",
    "metadata": {},
    "source": [
-    "## 2.4. Log the model"
+    "## 1.7. Log the model"
    ]
   },
   {
@@ -630,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started run 362968c82478466abc86fe92d158c987\n",
+      "Started run 6754c826986f4639a2ba5514020a9f58\n",
       "Load dataset...\n",
       "Prepare a train-test-split...\n",
       "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
@@ -649,7 +651,7 @@
     "\n",
     "    data_path = \"../data/penguins_classification.csv\"\n",
     "    data = pd.read_csv(data_path)\n",
-    "    mlflow.log_param(\"num_samples\", data.shape[0])  # <-- ADDED: track the number of samples in the dataset\n",
+    "    mlflow.log_param(\"num_samples\", data.shape[0])  # <-- track the number of samples in the dataset\n",
     "\n",
     "    # Prepare a train-test-split\n",
     "    print(\"Prepare a train-test-split...\")\n",
@@ -678,7 +680,117 @@
     "    print(f\"Result: Accuracy of the DecisionTreeClassifier: {test_score:.1%}\")\n",
     "    \n",
     "    # Log the model\n",
-    "    mlflow.sklearn.log_model(tree, \"model\")"
+    "    mlflow.sklearn.log_model(tree, \"model\")  # <-- Log the model\n",
+    "    mlflow.log_artifact(\"1_Run and track experiments.ipynb\")  # <-- track the source code of the notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a4d31206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercice: Run the experiment (in the above cell) with different model parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffcaf369",
+   "metadata": {},
+   "source": [
+    "## 1.8. Compare models in the UI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8461ec0c",
+   "metadata": {},
+   "source": [
+    "## 1.9. Optional: Add a signature to the model\n",
+    "\n",
+    "Define what the model expects and enforce later in deployment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cd07df45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlflow.models.signature import ModelSignature\n",
+    "from mlflow.types.schema import Schema, ColSpec\n",
+    "\n",
+    "input_schema = Schema([\n",
+    "  ColSpec(\"double\", \"Culmen Length (mm)\"),\n",
+    "  ColSpec(\"double\", \"Culmen Depth (mm)\"),\n",
+    "])\n",
+    "output_schema = Schema([ColSpec(\"string\")])\n",
+    "\n",
+    "signature = ModelSignature(inputs=input_schema, outputs=output_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "35afcf5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started run d981dd2939c748fe9c7142dde9c832a8\n",
+      "Load dataset...\n",
+      "Prepare a train-test-split...\n",
+      "Initialize and fit a DecisionTreeClassifier with max_depth=3, max_leaf_nodes4\n",
+      "Result: Accuracy of the DecisionTreeClassifier: 96.5%\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlflow.set_experiment(exp_name)\n",
+    "with mlflow.start_run() as run:\n",
+    "    print(f\"Started run {run.info.run_id}\")\n",
+    "    # Load dataset\n",
+    "    print(\"Load dataset...\")\n",
+    "    culmen_columns = [\"Culmen Length (mm)\", \"Culmen Depth (mm)\"]\n",
+    "    target_column = \"Species\"\n",
+    "\n",
+    "    data_path = \"../data/penguins_classification.csv\"\n",
+    "    data = pd.read_csv(data_path)\n",
+    "    mlflow.log_param(\"num_samples\", data.shape[0])\n",
+    "\n",
+    "    # Prepare a train-test-split\n",
+    "    print(\"Prepare a train-test-split...\")\n",
+    "    data, target = data[culmen_columns], data[target_column]\n",
+    "    data_train, data_test, target_train, target_test = train_test_split(\n",
+    "        data, target, random_state=0)\n",
+    "\n",
+    "    # Initialize and fit a classifier\n",
+    "    max_depth = 3\n",
+    "    max_leaf_nodes = 4\n",
+    "    print(f\"Initialize and fit a DecisionTreeClassifier with max_depth={max_depth}, max_leaf_nodes{max_leaf_nodes}\")\n",
+    "    \n",
+    "    mlflow.log_params(\n",
+    "        {\"max_depth\": max_depth, \n",
+    "         \"max_leaf_nodes\": max_leaf_nodes}\n",
+    "    )\n",
+    "    tree = DecisionTreeClassifier(\n",
+    "        max_depth=max_depth,\n",
+    "        max_leaf_nodes=max_leaf_nodes\n",
+    "    )\n",
+    "    tree.fit(data_train, target_train)\n",
+    "\n",
+    "    # Calculate test scores\n",
+    "    test_score = tree.score(data_test, target_test)\n",
+    "    mlflow.log_metric(\"test_accuracy\", test_score)\n",
+    "    print(f\"Result: Accuracy of the DecisionTreeClassifier: {test_score:.1%}\")\n",
+    "    \n",
+    "    # Log the model\n",
+    "    mlflow.sklearn.log_model(tree, \"model\", signature=signature)  # <-- Now log the model with a signature\n",
+    "    mlflow.log_artifact(\"1_Run and track experiments.ipynb\")"
    ]
   },
   {
@@ -686,12 +798,20 @@
    "id": "cc8b7642",
    "metadata": {},
    "source": [
-    "## 2.5 Use the model to predict locally"
+    "## 1.10. Use the model to predict locally"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9550aa26",
+   "metadata": {},
+   "source": [
+    "Now we pick a model, retrieve it and make a prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "70f86ddd",
    "metadata": {},
    "outputs": [
@@ -715,30 +835,20 @@
        "       'Chinstrap', 'Adelie', 'Chinstrap', 'Gentoo'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import mlflow\n",
-    "logged_model = 'runs:/362968c82478466abc86fe92d158c987/model'\n",
+    "logged_model = 'runs:/d981dd2939c748fe9c7142dde9c832a8/model'\n",
     "\n",
     "# Load model as a Sklearn Model.\n",
     "loaded_model = mlflow.sklearn.load_model(logged_model)\n",
     "\n",
     "# Predict on a Pandas DataFrame.\n",
-    "import pandas as pd\n",
     "loaded_model.predict(pd.DataFrame(data_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2b840d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
