--- a/tutorial/2_Deploy and manage.ipynb
+++ b/tutorial/2_Deploy and manage.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 2.1 MLflow Models\n",
     "\n",
-    "An MLflow Model is a standard format for packaging machine learning models that can be used in a variety of downstream tools—for example, real-time serving through a REST API or batch inference on Apache Spark. The format defines a convention that lets you save a model in different “flavors” that can be understood by different downstream tools.\n",
+    "An MLflow Model is a standard format for packaging machine learning models that can be used in a variety of downstream tools - for example, real-time serving through a REST API or batch inference on Apache Spark. The format defines a convention that lets you save a model in different “flavors” that can be understood by different downstream tools.\n",
     "\n",
     "All of the flavors that a particular model supports are defined in its MLmodel file in YAML format. For example, mlflow.sklearn outputs models as follows:\n",
     "\n",
@@ -63,7 +63,7 @@
     "\n",
     "The MLflow Model Registry component is a centralized model store, set of APIs, and UI, to collaboratively manage the full lifecycle of an MLflow Model. It provides model lineage (which MLflow experiment and run produced the model), model versioning, stage transitions (for example from staging to production), and annotations.\n",
     "\n",
-    "- **Model**: A MLflow Model is created from an experiment or run that is logged with one of the model flavor’s mlflow.<model_flavor>.log_model() methods. Once logged, this model can then be registered with the Model Registry.\n",
+    "- **Model**: A MLflow Model is created from an experiment or run that is logged with one of the model flavor’s mlflow.\\<model_flavor\\>.log_model() methods. Once logged, this model can then be registered with the Model Registry.\n",
     "\n",
     "- **Registered Model**: A MLflow Model can be registered with the Model Registry. A registered model has a unique name, contains versions, associated transitional stages, model lineage, and other metadata.\n"
    ]
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "d4c906e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mlflow\n",
     "\n",
-    "remote_server_uri = \"http://0.0.0.0:5000\" # set to your server URI\n",
+    "remote_server_uri = \"http://0.0.0.0:5000\"   # set to your server URI\n",
     "mlflow.set_tracking_uri(remote_server_uri)  # or set the MLFLOW_TRACKING_URI in the env"
    ]
   },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "94949859",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 'penguins_clf' already exists in registry.\n"
+      "<RegisteredModel: creation_timestamp=1649407583965, description='', last_updated_timestamp=1649407583965, latest_versions=[], name='penguins_clf', tags={}>\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "00bf1e9f",
    "metadata": {},
    "outputs": [
@@ -144,23 +144,23 @@
      "output_type": "stream",
      "text": [
       "Registered model 'penguins_clf' already exists. Creating a new version of this model...\n",
-      "2022/04/01 11:48:29 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: penguins_clf, version 1\n",
+      "2022/04/08 10:46:46 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: penguins_clf, version 1\n",
       "Created version '1' of model 'penguins_clf'.\n"
      ]
     }
    ],
    "source": [
-    "run_id = \"362968c82478466abc86fe92d158c987\"\n",
+    "run_id = \"d981dd2939c748fe9c7142dde9c832a8\"\n",
     "\n",
     "result = mlflow.register_model(\n",
-    "    f\"runs:/{run_id}/sklearn-model\",\n",
+    "    f\"runs:/{run_id}/model\",\n",
     "    f\"{model_name}\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "37bad46e",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ModelVersion: creation_timestamp=1648806509738, current_stage='None', description='', last_updated_timestamp=1648806509738, name='penguins_clf', run_id='362968c82478466abc86fe92d158c987', run_link='', source='mlruns/1/362968c82478466abc86fe92d158c987/artifacts/sklearn-model', status='READY', status_message='', tags={}, user_id='', version='1'>\n"
+      "<ModelVersion: creation_timestamp=1649407606847, current_stage='None', description='', last_updated_timestamp=1649407606847, name='penguins_clf', run_id='d981dd2939c748fe9c7142dde9c832a8', run_link='', source='mlruns/1/d981dd2939c748fe9c7142dde9c832a8/artifacts/model', status='READY', status_message='', tags={}, user_id='', version='1'>\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "7897545d",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "dbd7d9d5",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "'[\"Adelie\", \"Adelie\"]'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,14 +289,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1939562",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7df36042",
    "metadata": {},
@@ -314,12 +306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "393456a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: creation_timestamp=1649407606847, current_stage='Production', description='', last_updated_timestamp=1649407880904, name='penguins_clf', run_id='d981dd2939c748fe9c7142dde9c832a8', run_link='', source='mlruns/1/d981dd2939c748fe9c7142dde9c832a8/artifacts/model', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = MlflowClient()\n",
+    "\n",
     "client.transition_model_version_stage(\n",
     "    name=model_name,\n",
     "    version=1,\n",
